# WorkFlow

./: CMakeLists.txt  Flow.cpp  Flow.h  Parser.cpp  Parser.h  Worker.cpp  Worker.h  main.cpp
Blocks/: Dump.cpp  Dump.h  Grep.cpp  Grep.h  ReadFile.cpp  ReadFile.h  Replace.cpp  Replace.h  Sort.cpp  Sort.h  WriteFile.cpp  WriteFile.h
